shoppingportal-ui-shell/shoppingportalui-k8/shoppingportalui_dep.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: shoppingportalui-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      name: shoppingportalui
      zone: prod
      app: shoppingportalui
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: shoppingportalui
        version: "1.0.0"
        release: stable
        tier: fe
        zone: prod
        managed-by: m2
        app: shoppingportalui
    spec:
      containers:
        - name: shoppingportalui-ctr
          image: metamagicglobal/shoppingportalui:k8 
          imagePullPolicy: Always
          ports:
          - containerPort: 80
