shoppingportal-ui-shell/shoppingportalui-k8/shoppingportalui_dep_canary.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: shoppingportalui-deploy-canary
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      zone: prod
      app: shoppingportalui
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: shoppingportalui
        version: v2
        release: canary
        tier: fe
        zone: prod
        managed-by: m2
        app: shoppingportalui
    spec:
      containers:
        - name: shoppingportalui-ctr
          image: metamagicglobal/shoppingportalui_v2:k8 
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
