shoppingportal-ui-shell/shoppingportalui-k8/shoppingportalui-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: shoppingportalui-svc
  namespace: shoppingportal
  labels:
    name: shoppingportaluisvc
spec:
  selector:
        name: shoppingportalui
        version: "1.0.0"
        release: stable
        tier: fe
        zone: prod
        managed-by: m2
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: my-http-port
