shoppingportal-ui-shell/shoppingportalui-k8/shoppingportal-destination-rules.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shoppingportal-destination-rules
  namespace: shoppingportal    
spec:
  host: shoppingportalui-svc.shoppingportal.svc.cluster.local
  subsets:
  - name: stable
    labels:
        version: "1.0.0"
  - name: canary
    labels:
        version: "2.0.0"
