shoppingportal-ui-shell/shoppingportalui-k8/shoppingportalui-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shoppingportalui-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /shoppingportal
    route:
    - destination:
        host: shoppingportalui-svc.shoppingportal.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 80
